--- a/projects/projects.json
+++ b/projects/projects.json
@@ -36,7 +36,7 @@
     }
   },
   {
-    "name": "Stone-Paper-Scissors",
+    "name": "A Landing Page",
     "desc": "A space-themed landing page built with React, featuring a full-screen starry background, parallax scrolling, and interactive elements.",
     "image": "project3",
     "links": {
